apollo-router/tests/snapshots/set_context__set_context_union_rust_qp.snap
---
source: apollo-router/tests/set_context.rs
expression: response
---
{
  "data": {
    "k": {
      "v": {
        "field": 3456
      }
    }
  },
  "extensions": {
    "apolloQueryPlan": {
      "object": {
        "kind": "QueryPlan",
        "node": {
          "kind": "Sequence",
          "nodes": [
            {
              "authorization": {
                "is_authenticated": false,
                "policies": [],
                "scopes": []
              },
              "contextRewrites": null,
              "id": null,
              "inputRewrites": null,
              "kind": "Fetch",
              "operation": "query QueryUnion__Subgraph1__0 { k { __typename ... on A { v { __typename id } prop } ... on B { prop v { __typename id } } } }",
              "operationKind": "query",
              "operationName": "QueryUnion__Subgraph1__0",
              "outputRewrites": null,
              "schemaAwareHash": "5b25f6f48a9f779615297797f182c1d659661c351a2cfc998638631dcb06f32b",
              "serviceName": "Subgraph1",
              "variableUsages": []
            },
            {
              "kind": "Flatten",
              "node": {
                "authorization": {
                  "is_authenticated": false,
                  "policies": [],
                  "scopes": []
                },
                "contextRewrites": [
                  {
                    "kind": "KeyRenamer",
                    "path": [
                      "..",
                      "... on A",
                      "prop"
                    ],
                    "renameKeyTo": "contextualArgument_1_1"
                  },
                  {
                    "kind": "KeyRenamer",
                    "path": [
                      "..",
                      "... on B",
                      "prop"
                    ],
                    "renameKeyTo": "contextualArgument_1_1"
                  }
                ],
                "id": null,
                "inputRewrites": null,
                "kind": "Fetch",
                "operation": "query QueryUnion__Subgraph1__1($representations: [_Any!]!, $contextualArgument_1_1: String) { _entities(representations: $representations) { ... on V { field(a: $contextualArgument_1_1) } } }",
                "operationKind": "query",
                "operationName": "QueryUnion__Subgraph1__1",
                "outputRewrites": null,
                "requires": [
                  {
                    "kind": "InlineFragment",
                    "selections": [
                      {
                        "kind": "Field",
                        "name": "__typename"
                      },
                      {
                        "kind": "Field",
                        "name": "id"
                      }
                    ],
                    "typeCondition": "V"
                  }
                ],
                "schemaAwareHash": "4d177920d6b646c239583d1cdca520cea5170370e6bade999ac44088826486b0",
                "serviceName": "Subgraph1",
                "variableUsages": [
                  "contextualArgument_1_1"
                ]
              },
              "path": [
                "k",
                "v"
              ]
            }
          ]
        }
      },
      "text": "QueryPlan {\n  Sequence {\n    Fetch(service: \"Subgraph1\") {\n      {\n        k {\n          __typename\n          ... on A {\n            v {\n              __typename\n              id\n            }\n            prop\n          }\n          ... on B {\n            prop\n            v {\n              __typename\n              id\n            }\n          }\n        }\n      }\n    },\n    Flatten(path: \"k.v\") {\n      Fetch(service: \"Subgraph1\") {\n        {\n          ... on V {\n            __typename\n            id\n          }\n        } =>\n        {\n          ... on V {\n            field(a: $contextualArgument_1_1)\n          }\n        }\n      },\n    },\n  },\n}"
    }
  }
}
