apollo-router/tests/snapshots/set_context__set_context_unrelated_fetch_failure_rust_qp.snap
---
source: apollo-router/tests/set_context.rs
expression: response
---
{
  "data": null,
  "errors": [
    {
      "message": "Some error",
      "path": [
        "t",
        "u"
      ],
      "extensions": {
        "service": "Subgraph2"
      }
    },
    {
      "message": "Missing field",
      "path": [
        "t",
        "u",
        "field"
      ],
      "extensions": {
        "code": "RESPONSE_VALIDATION_FAILED"
      }
    }
  ],
  "extensions": {
    "apolloQueryPlan": {
      "object": {
        "kind": "QueryPlan",
        "node": {
          "kind": "Sequence",
          "nodes": [
            {
              "authorization": {
                "is_authenticated": false,
                "policies": [],
                "scopes": []
              },
              "contextRewrites": null,
              "id": null,
              "inputRewrites": null,
              "kind": "Fetch",
              "operation": "query Query_fetch_failure__Subgraph1__0 { t { id u { __typename id } prop } }",
              "operationKind": "query",
              "operationName": "Query_fetch_failure__Subgraph1__0",
              "outputRewrites": null,
              "schemaAwareHash": "01b286a29f73915aacbaf003e4e9c96633ac4428754f7af0e9a8a14b73eaca7a",
              "serviceName": "Subgraph1",
              "variableUsages": []
            },
            {
              "kind": "Parallel",
              "nodes": [
                {
                  "kind": "Flatten",
                  "node": {
                    "authorization": {
                      "is_authenticated": false,
                      "policies": [],
                      "scopes": []
                    },
                    "contextRewrites": null,
                    "id": null,
                    "inputRewrites": null,
                    "kind": "Fetch",
                    "operation": "query Query_fetch_failure__Subgraph2__1($representations: [_Any!]!) { _entities(representations: $representations) { ... on U { b } } }",
                    "operationKind": "query",
                    "operationName": "Query_fetch_failure__Subgraph2__1",
                    "outputRewrites": null,
                    "requires": [
                      {
                        "kind": "InlineFragment",
                        "selections": [
                          {
                            "kind": "Field",
                            "name": "__typename"
                          },
                          {
                            "kind": "Field",
                            "name": "id"
                          }
                        ],
                        "typeCondition": "U"
                      }
                    ],
                    "schemaAwareHash": "9c49dee65ff4f4ce1f9d21d088e325e0a14061bbaae6f1462e098920197ae352",
                    "serviceName": "Subgraph2",
                    "variableUsages": []
                  },
                  "path": [
                    "t",
                    "u"
                  ]
                },
                {
                  "kind": "Flatten",
                  "node": {
                    "authorization": {
                      "is_authenticated": false,
                      "policies": [],
                      "scopes": []
                    },
                    "contextRewrites": [
                      {
                        "kind": "KeyRenamer",
                        "path": [
                          "..",
                          "... on T",
                          "prop"
                        ],
                        "renameKeyTo": "contextualArgument_1_0"
                      }
                    ],
                    "id": null,
                    "inputRewrites": null,
                    "kind": "Fetch",
                    "operation": "query Query_fetch_failure__Subgraph1__2($representations: [_Any!]!, $contextualArgument_1_0: String) { _entities(representations: $representations) { ... on U { field(a: $contextualArgument_1_0) } } }",
                    "operationKind": "query",
                    "operationName": "Query_fetch_failure__Subgraph1__2",
                    "outputRewrites": null,
                    "requires": [
                      {
                        "kind": "InlineFragment",
                        "selections": [
                          {
                            "kind": "Field",
                            "name": "__typename"
                          },
                          {
                            "kind": "Field",
                            "name": "id"
                          }
                        ],
                        "typeCondition": "U"
                      }
                    ],
                    "schemaAwareHash": "ccfabd23bd5ad299cb5299ce1395e4f1b3bf2c10b228090106f8cef7311eb526",
                    "serviceName": "Subgraph1",
                    "variableUsages": [
                      "contextualArgument_1_0"
                    ]
                  },
                  "path": [
                    "t",
                    "u"
                  ]
                }
              ]
            }
          ]
        }
      },
      "text": "QueryPlan {\n  Sequence {\n    Fetch(service: \"Subgraph1\") {\n      {\n        t {\n          id\n          u {\n            __typename\n            id\n          }\n          prop\n        }\n      }\n    },\n    Parallel {\n      Flatten(path: \"t.u\") {\n        Fetch(service: \"Subgraph2\") {\n          {\n            ... on U {\n              __typename\n              id\n            }\n          } =>\n          {\n            ... on U {\n              b\n            }\n          }\n        },\n      },\n      Flatten(path: \"t.u\") {\n        Fetch(service: \"Subgraph1\") {\n          {\n            ... on U {\n              __typename\n              id\n            }\n          } =>\n          {\n            ... on U {\n              field(a: $contextualArgument_1_0)\n            }\n          }\n        },\n      },\n    },\n  },\n}"
    },
    "valueCompletion": [
      {
        "message": "Cannot return null for non-nullable type Int",
        "path": [
          "t",
          "u"
        ]
      }
    ]
  }
}
